syntax = "proto3";

package atomix.backup.storage;

option java_package = "io.atomix.protocols.backup.snapshot";
option java_outer_classname = "SnapshotProto";
option java_multiple_files = true;

// Service snapshot
message ServiceSnapshot {
    repeated ServiceSession sessions = 7;
    bytes snapshot = 8;
}

// Service session
message ServiceSession {
    int64 session_id = 1;
    string member_id = 2;
}